--- a/results-summary-component-main/css/style.css
+++ b/results-summary-component-main/css/style.css
@@ -6,7 +6,8 @@ body{
     background-color: hsl(0, 0%, 100%);
     height: 500px;
     width: 800px;
-    /* margin: 0 auto; */
+    margin: 0 auto;
+    margin-top: 20%;
     display:grid;
     grid-template-columns: 1fr 1fr;
     border-top-left-radius: 30px ;
